# ar-shopify-product-generation

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
docs/: fixture-review.md
public/models/: nail-placement.metadata.json  nail-placement.onnx  nail-placement.training.json  nail-visibility.metadata.json  nail-visibility.onnx  nail-visibility.training.json
scripts/: collect_nail_placement_training_data.mjs  collect_nail_visibility_training_data.mjs  download-shopify-press-ons.mjs  install-cloudflared.sh  strip-png-private-metadata.mjs  train_nail_placement_model.py  train_nail_visibility_model.py  validate_nail_asset_ratios.py  validate_nail_placement_model.py  validate_nail_visibility_model.py
src/: App.test.tsx  App.tsx  FixtureMode.tsx  NailAnnotatorMode.tsx  main.tsx  styles.css  vite-env.d.ts
src/app/: demoProduct.ts  fixtureManifest.test.ts  fixtureManifest.ts  pressOnProducts.json  pressOnProducts.test.ts  pressOnProducts.ts
src/ar/: debugDraw.ts  drawNails.ts  fixtureEvaluation.test.ts  fixtureEvaluation.ts  handTracker.ts  nailAssets.test.ts  nailAssets.ts  nailGeometry.test.ts  nailGeometry.ts  nailPlacement.test.ts  nailPlacement.ts  nailPlacementArtifacts.test.ts  nailVisibility.test.ts  nailVisibility.ts  (+6 more)
tools/nail-extractor/: pyproject.toml
tools/nail-extractor/src/nail_extractor/: __init__.py  cli.py  image_io.py  masks.py  metadata.py  roi.py  scoring.py
tools/nail-extractor/tests/: test_cli.py  test_masks.py  test_roi.py  test_scoring.py
(+10 files in other folders)
