[project]
name = "nail-extractor"
version = "0.1.0"
description = "Local press-on nail extraction pipeline for Always Like AR assets."
requires-python = ">=3.11"
dependencies = [
  "pillow>=12.0.0",
  "pillow-heif>=1.1.0",
  "black>=26.0.0",
  "pytest>=9.0.0",
]

[tool.black]
line-length = 88

[project.scripts]
nail-extractor = "nail_extractor.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
